# evaluator

./: .gitignore  README.md  pyproject.toml
evaluator/: __init__.py
evaluator/calculators/: __init__.py  ratio.py
evaluator/formatters/: __init__.py
evaluator/models/: __init__.py  position_session_stats.py  session_stats.py
src/evaluator/: __init__.py  performance_evaluator.py
src/evaluator/calculators/: __init__.py  performance.py
src/evaluator/formatters/: __init__.py  performance.py
src/evaluator/models/: __init__.py  comparison.py  performance.py
tests/: __init__.py  test_evaluator.py  test_performance_evaluator.py
tests/calculators/: test_calculator.py  test_performance_calculator.py  test_ratio.py
tests/formatters/: test_formatter.py
tests/models/: test_comparison.py  test_performance_model.py  test_position_session_stats.py  test_session_stats.py
